projects looks great on firefox, needs fixes for chrome

--- a/app/sass/_projects.scss
+++ b/app/sass/_projects.scss
@@ -9,20 +9,33 @@
     grid-auto-rows: minmax(86vh, auto);
     grid-template-columns:  repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 5%;
+
+    :hover {
+      background-color: #eff4ff;
+    }
     
     .card {
       height: 100%;
       display: grid;
-      grid-template-rows: 10px repeat(4 auto) 10px;
+      grid-template-rows:  repeat(4 auto);
       
       h3 {
         color: #aaa;
         text-align: center;
+        grid-column-start: 1;
+        grid-row-start: 2;
       }
       
       p {
         text-align: justify;
         margin: 0 10px;
+        grid-column-start: 1;
+        grid-row-start: 3;
+      }
+
+      .card-corner-container-top {
+        grid-row-start: 1;
+        grid-column-start: 1;
       }
 
       .card-corner-container {
@@ -59,9 +72,11 @@
       }
       
       .project-image-container {
-        grid-row-start: 2;
+        background-color: white;
+        grid-row-start: 1;
+        grid-column-start: 1;
         align-self: center;
-        max-width: 60%;
+        max-width: 70%;
         height: width;
         padding: 5px;
         border-radius: 50%;
@@ -73,14 +88,18 @@
           height: 100%;
           border-radius: 50%;
           border: 2px solid black;
+          background-color: white;
         }
       }
 
       .project-link-container {
+        grid-column-start: 1;
+        grid-row-end: 5;
+        align-self: end;
+        padding-bottom: 20%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        align-content: flex-end;
       
         a {
           width: 15%;
@@ -104,10 +123,13 @@
           width: 100%;
           height: width;
           border-radius: 50%;
+          background-color: white;
         }
       }
       
       .card-corner-container-bottom {
+        grid-column-start: 1;
+        grid-row-start: 4;
         width: 100%;
         align-self: end;
       }
