--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -86,16 +86,25 @@ nav a:visited {
     grid-auto-rows: minmax(86vh, auto);
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 5%; }
+    .projects-container .projects-card-container :hover {
+      background-color: #eff4ff; }
     .projects-container .projects-card-container .card {
       height: 100%;
       display: grid;
-      grid-template-rows: 10px repeat(4 auto) 10px; }
+      grid-template-rows: repeat(4 auto); }
       .projects-container .projects-card-container .card h3 {
         color: #aaa;
-        text-align: center; }
+        text-align: center;
+        grid-column-start: 1;
+        grid-row-start: 2; }
       .projects-container .projects-card-container .card p {
         text-align: justify;
-        margin: 0 10px; }
+        margin: 0 10px;
+        grid-column-start: 1;
+        grid-row-start: 3; }
+      .projects-container .projects-card-container .card .card-corner-container-top {
+        grid-row-start: 1;
+        grid-column-start: 1; }
       .projects-container .projects-card-container .card .card-corner-container {
         height: 10px;
         display: flex;
@@ -118,9 +127,11 @@ nav a:visited {
           border-right: 1px solid #bbb;
           align-self: flex-end; }
       .projects-container .projects-card-container .card .project-image-container {
-        grid-row-start: 2;
+        background-color: white;
+        grid-row-start: 1;
+        grid-column-start: 1;
         align-self: center;
-        max-width: 60%;
+        max-width: 70%;
         height: width;
         padding: 5px;
         border-radius: 50%;
@@ -130,12 +141,16 @@ nav a:visited {
           width: 100%;
           height: 100%;
           border-radius: 50%;
-          border: 2px solid black; }
+          border: 2px solid black;
+          background-color: white; }
       .projects-container .projects-card-container .card .project-link-container {
+        grid-column-start: 1;
+        grid-row-end: 5;
+        align-self: end;
+        padding-bottom: 20%;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-content: flex-end; }
+        justify-content: space-around; }
         .projects-container .projects-card-container .card .project-link-container a {
           width: 15%;
           height: width;
@@ -151,8 +166,11 @@ nav a:visited {
         .projects-container .projects-card-container .card .project-link-container img {
           width: 100%;
           height: width;
-          border-radius: 50%; }
+          border-radius: 50%;
+          background-color: white; }
       .projects-container .projects-card-container .card .card-corner-container-bottom {
+        grid-column-start: 1;
+        grid-row-start: 4;
         width: 100%;
         align-self: end; }
 
